--- a/projects.html
+++ b/projects.html
@@ -655,26 +655,26 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <a class="navbar-brand" href="index.html#home">Divakar Kolli</a>
+      <a class="navbar-brand" href="index.html">Divakar Kolli</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html#home">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html#about">About</a>
+            <a class="nav-link" href="About.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html#skills">Skills</a>
+            <a class="nav-link" href="skills.html">Skills</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="projects.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html#contact">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -799,7 +799,7 @@
         </div>
       </div>
       <div class="text-center mt-5">
-        <a href="index.html#contact" class="services-button">Let's Collaborate</a>
+        <a href="contact.html" class="services-button">Let's Collaborate</a>
       </div>
     </div>
   </section>
@@ -828,7 +828,7 @@
             <h3>Your Complete Web Solution</h3>
             <p>DSP Technologies is my startup dedicated to providing comprehensive web solutions for businesses of all sizes. We specialize in creating custom websites that are not only visually appealing but also optimized for performance and user experience.</p>
             <p>Our services include website design and development, WordPress solutions, SEO optimization, and content creation. Whether you need a simple portfolio site or a complex e-commerce platform, we have the expertise to bring your vision to life.</p>
-            <a href="index.html#contact" class="services-button mt-3">Get Your Website</a>
+            <a href="contact.html" class="services-button mt-3">Get Your Website</a>
           </div>
         </div>
       </div>
