--- a/skills.html
+++ b/skills.html
@@ -467,11 +467,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-          <li class="nav-item"><a class="nav-link active" href="#skills">Skills</a></li>
-          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="About.html">About</a></li>
+          <li class="nav-item"><a class="nav-link active" href="skills.html">Skills</a></li>
+          <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -626,7 +626,7 @@
         </div>
       </div>
       <div class="text-center mt-5">
-        <a href="#contact" class="services-button">Let's Collaborate</a>
+        <a href="contact.html" class="services-button">Let's Collaborate</a>
       </div>
     </div>
   </section>
@@ -644,7 +644,7 @@
       <div class="cta-content">
         <h2 class="cta-title">Ready to Bring Your Ideas to Life?</h2>
         <p class="cta-subtitle">Let's collaborate to create something extraordinary. Reach out today!</p>
-        <a href="#contact" class="cta-button">Get in Touch</a>
+        <a href="contact.html" class="cta-button">Get in Touch</a>
       </div>
     </div>
   </section>
