--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact - Divakar Kolli</title>
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Font Awesome for icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- Font Awesome for potential icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
-    /* Contact Section Styles */
+    /* Body Reset */
+    body {
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
+      color: white;
+      font-family: Arial, sans-serif;
+    }
+
+    /* Contact Section */
     .contact-section {
       position: relative;
       min-height: 100vh;
       display: flex;
       align-items: center;
-      background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
-      color: white;
-      padding: 4rem 0;
+      justify-content: center;
+      background: transparent; /* Inherit body gradient */
+      padding: 4rem 1rem;
       overflow: hidden;
     }
 
@@ -30,12 +39,14 @@
       left: 0;
       z-index: 1;
       filter: drop-shadow(0 10px 20px rgba(0,0,0,0.3));
+      pointer-events: none; /* This prevents the elements from blocking clicks */
     }
 
     .element {
       position: absolute;
       animation: float 20s infinite ease-in-out;
       transform-style: preserve-3d;
+      pointer-events: none; /* Apply to all floating elements */
     }
 
     .gemstone {
@@ -92,6 +103,7 @@
       color: transparent;
       animation: fadeInDown 1s ease;
       position: relative;
+      z-index: 2;
     }
 
     .section-title:after {
@@ -108,15 +120,16 @@
     /* Contact Form */
     .contact-form {
       max-width: 600px;
-      margin: 0 auto;
+      width: 100%;
       background: rgba(15, 12, 41, 0.5);
       backdrop-filter: blur(8px);
       border: 1px solid rgba(255,255,255,0.1);
       border-radius: 15px;
-      padding: 30px;
+      padding: 2rem;
       box-shadow: 0 10px 30px rgba(0,0,0,0.3);
       animation: fadeInUp 1s ease 0.1s both;
       transition: all 0.3s ease;
+      z-index: 2;
     }
 
     .contact-form:hover {
@@ -127,8 +140,7 @@
     .form-label {
       font-size: 1rem;
       color: rgba(255,255,255,0.9);
-      margin-bottom: 8px;
-      display: block;
+      margin-bottom: 0.5rem;
     }
 
     .form-control {
@@ -136,9 +148,10 @@
       border: 1px solid rgba(255,255,255,0.2);
       border-radius: 10px;
       color: white;
-      font-size: 1rem;
-      padding: 12px;
+      padding: 0.75rem;
       transition: all 0.3s ease;
+      position: relative;
+      z-index: 3; /* Ensure inputs are above floating elements */
     }
 
     .form-control:focus {
@@ -157,19 +170,16 @@
       min-height: 120px;
     }
 
-    /* Button */
+    /* Custom Button */
     .services-button {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      padding: 0.75rem 2rem;
+      width: 100%;
+      padding: 0.75rem;
       background: linear-gradient(45deg, #ff6b6b, #ff5252);
       color: white;
       font-size: 1rem;
       font-weight: 600;
-      border-radius: 25px;
       border: none;
-      text-decoration: none;
+      border-radius: 25px;
       transition: all 0.3s ease;
       box-shadow: 0 5px 20px rgba(255, 107, 107, 0.5);
     }
@@ -189,25 +199,22 @@
     #formFeedback.success {
       color: #28a745;
       background: rgba(40, 167, 69, 0.1);
-      padding: 10px;
+      padding: 0.5rem;
       border-radius: 8px;
       text-align: center;
+      margin-top: 1rem;
     }
 
     #formFeedback.error {
       color: #dc3545;
       background: rgba(220, 53, 69, 0.1);
-      padding: 10px;
+      padding: 0.5rem;
       border-radius: 8px;
       text-align: center;
+      margin-top: 1rem;
     }
 
     /* Animations */
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-
     @keyframes fadeInDown {
       from { opacity: 0; transform: translateY(-20px); }
       to { opacity: 1; transform: translateY(0); }
@@ -216,21 +223,6 @@
     @keyframes fadeInUp {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
-    }
-
-    /* Responsive Design */
-    @media (max-width: 767.98px) {
-      .section-title {
-        font-size: 2rem;
-      }
-
-      .contact-form {
-        padding: 20px;
-      }
-
-      .element {
-        display: none;
-      }
     }
 
     /* Navbar Styles */
@@ -248,7 +240,6 @@
     .navbar-brand {
       font-size: 1.5rem;
       font-weight: 700;
-      color: white !important;
       background: linear-gradient(45deg, #fff, #ff6b6b);
       -webkit-background-clip: text;
       background-clip: text;
@@ -271,7 +262,20 @@
       filter: invert(1);
     }
 
-    @media (max-width: 991px) {
+    /* Responsive Design */
+    @media (max-width: 767.98px) {
+      .section-title {
+        font-size: 2rem;
+      }
+      .contact-form {
+        padding: 1.5rem;
+      }
+      .element {
+        display: none; /* Hide floating elements on mobile */
+      }
+      .contact-section {
+        padding: 2rem 1rem;
+      }
       .navbar-nav {
         background: rgba(15, 12, 41, 0.9);
         padding: 1rem;
@@ -325,51 +329,64 @@
     <div class="container">
       <h2 class="section-title">Get In Touch</h2>
       <div class="contact-form">
-        <form id="contactForm" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-          <div class="mb-4">
+        <form id="contactForm" action="https://formspree.io/f/movweaba" method="POST">
+          <div class="mb-3">
             <label for="name" class="form-label">Your Name</label>
-            <input type="text" class="form-control" id="name" name="name" required>
+            <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name" required>
           </div>
-          <div class="mb-4">
+          <div class="mb-3">
             <label for="email" class="form-label">Email Address</label>
-            <input type="email" class="form-control" id="email" name="email" required>
+            <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
           </div>
-          <div class="mb-4">
+          <div class="mb-3">
             <label for="subject" class="form-label">Subject</label>
-            <input type="text" class="form-control" id="subject" name="subject" required>
+            <input type="text" class="form-control" id="subject" name="subject" placeholder="Enter subject" required>
           </div>
-          <div class="mb-4">
+          <div class="mb-3">
             <label for="message" class="form-label">Message</label>
-            <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+            <textarea class="form-control" id="message" name="message" rows="5" placeholder="Enter your message" required></textarea>
           </div>
-          <button type="submit" class="services-button w-100 py-2">Send Message</button>
+          <button type="submit" class="services-button">Send Message</button>
         </form>
         <div id="formFeedback" class="mt-3" style="display: none;"></div>
       </div>
     </div>
   </section>
 
-  <!-- Bootstrap JS Bundle -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
+      console.log('Page loaded, initializing form...');
+
       const form = document.getElementById('contactForm');
       const feedback = document.getElementById('formFeedback');
       const submitButton = form.querySelector('button[type="submit"]');
 
-      form.addEventListener('submit', async function(event) {
-        event.preventDefault(); // Prevent page reload
+      if (!form || !feedback || !submitButton) {
+        console.error('Error: Form elements not found. Check IDs: contactForm, formFeedback, or submit button.');
+        feedback.style.display = 'block';
+        feedback.className = 'error';
+        feedback.textContent = 'Form initialization failed. Please reload the page.';
+        return;
+      }
 
-        // Disable button during submission
+      console.log('Form elements found, setting up submission handler.');
+
+      form.addEventListener('submit', async function(event) {
+        event.preventDefault();
+        console.log('Form submission triggered.');
+
         submitButton.disabled = true;
         submitButton.textContent = 'Sending...';
+        feedback.style.display = 'none';
 
-        // Collect form data
         const formData = new FormData(form);
         const data = Object.fromEntries(formData);
+        console.log('Form data collected:', data);
 
         try {
-          const response = await fetch(form.action, {
+          const response = await fetch('https://formspree.io/f/movweaba', {
             method: 'POST',
             headers: {
               'Accept': 'application/json',
@@ -378,25 +395,26 @@
             body: JSON.stringify(data)
           });
 
+          console.log('Formspree response:', response.status, response.statusText);
+
           if (response.ok) {
-            // Success feedback
             feedback.className = 'success';
-            feedback.textContent = `Message sent successfully! I'll get back to you soon.`;
+            feedback.textContent = 'Message sent successfully! I will get back to you soon.';
             feedback.style.display = 'block';
-            form.reset(); // Clear form
+            form.reset();
+            console.log('Form submitted successfully.');
           } else {
-            // Error feedback
             feedback.className = 'error';
-            feedback.textContent = 'Failed to send message. Please try again later.';
+            feedback.textContent = `Failed to send message (Error ${response.status}: ${response.statusText}). Please try again.`;
             feedback.style.display = 'block';
+            console.error('Submission failed:', response.statusText);
           }
         } catch (error) {
-          // Network or other errors
           feedback.className = 'error';
-          feedback.textContent = 'An error occurred. Please check your connection and try again.';
+          feedback.textContent = 'Error: Unable to send message. Check your connection or try again later.';
           feedback.style.display = 'block';
+          console.error('Submission error:', error.message);
         } finally {
-          // Re-enable button
           submitButton.disabled = false;
           submitButton.textContent = 'Send Message';
         }
